packages/Sympathy/Sympathy-1.6.2-py3-none-any.whl/sympathy_app/Sympathy/Test/Unit/Workflows/errors/empty.syx
<?xml version="1.0" encoding="utf-8"?>
<flow height="50.0" id="" uuid="{77bb3ca1-d8a8-4640-a241-619fa953f5d3}" width="50.0" x="0.0" xmlns="http://www.sysess.org/sympathyfordata/workflow/1.0" y="0.0">
  <label/>
  <description/>
  <author/>
  <copyright/>
  <version/>
  <source/>
  <ports/>
</flow>
